[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
]

[project]
name = "rapidast"
dynamic = ["dependencies", "version"]

[tool.setuptools]
packages = ["configmodel", "exports", "utils", "scanners"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
version = {file = "VERSION.TXT"}

[tool.ruff]
line-length = 120
