[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "setuptools-scm[toml]>=8",
]

[project]
name = "rapidast"
dynamic = ["dependencies", "version"]

[tool.setuptools]
packages = ["configmodel", "exports", "utils", "scanners"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[tool.setuptools_scm]
version_file = "VERSION.TXT"
version_scheme = "version:custom_version_scheme"
local_scheme = "version:custom_local_scheme"

[tool.ruff]
line-length = 120
